_build/parser.automaton
State 0:
start' -> . start [ # ]
-- On PACKAGE shift to state 1
-- On start shift to state 4
-- On package_clause shift to state 5

State 1:
package_clause -> PACKAGE . IDENTIFIER SEMICOLON [ VAR TYPE IMPORT FUNC EOF ]
-- On IDENTIFIER shift to state 2

State 2:
package_clause -> PACKAGE IDENTIFIER . SEMICOLON [ VAR TYPE IMPORT FUNC EOF ]
-- On SEMICOLON shift to state 3

State 3:
package_clause -> PACKAGE IDENTIFIER SEMICOLON . [ VAR TYPE IMPORT FUNC EOF ]
-- On VAR reduce production package_clause -> PACKAGE IDENTIFIER SEMICOLON 
-- On TYPE reduce production package_clause -> PACKAGE IDENTIFIER SEMICOLON 
-- On IMPORT reduce production package_clause -> PACKAGE IDENTIFIER SEMICOLON 
-- On FUNC reduce production package_clause -> PACKAGE IDENTIFIER SEMICOLON 
-- On EOF reduce production package_clause -> PACKAGE IDENTIFIER SEMICOLON 

State 4:
start' -> start . [ # ]
-- On # accept start

State 5:
start -> package_clause . import_decls top_level_decls EOF [ # ]
-- On IMPORT shift to state 6
-- On import_decls shift to state 7
-- On VAR reduce production import_decls -> 
-- On TYPE reduce production import_decls -> 
-- On FUNC reduce production import_decls -> 
-- On EOF reduce production import_decls -> 

State 6:
import_decls -> IMPORT . [ VAR TYPE FUNC EOF ]
-- On VAR reduce production import_decls -> IMPORT 
-- On TYPE reduce production import_decls -> IMPORT 
-- On FUNC reduce production import_decls -> IMPORT 
-- On EOF reduce production import_decls -> IMPORT 

State 7:
start -> package_clause import_decls . top_level_decls EOF [ # ]
-- On top_level_decls shift to state 8
-- On VAR reduce production top_level_decls -> 
-- On TYPE reduce production top_level_decls -> 
-- On FUNC reduce production top_level_decls -> 
-- On EOF reduce production top_level_decls -> 

State 8:
start -> package_clause import_decls top_level_decls . EOF [ # ]
top_level_decls -> top_level_decls . type_decls [ VAR TYPE FUNC EOF ]
top_level_decls -> top_level_decls . var_decls [ VAR TYPE FUNC EOF ]
top_level_decls -> top_level_decls . func_decl [ VAR TYPE FUNC EOF ]
-- On VAR shift to state 9
-- On TYPE shift to state 137
-- On FUNC shift to state 151
-- On EOF shift to state 231
-- On var_decls shift to state 232
-- On type_decls shift to state 233
-- On func_decl shift to state 234

State 9:
var_decls -> VAR . var_spec [ VAR TYPE FUNC EOF ]
var_decls -> VAR . LPAR var_specs RPAR SEMICOLON [ VAR TYPE FUNC EOF ]
-- On LPAR shift to state 10
-- On IDENTIFIER shift to state 11
-- On var_spec shift to state 136
-- On ident_list shift to state 16

State 10:
var_decls -> VAR LPAR . var_specs RPAR SEMICOLON [ VAR TYPE FUNC EOF ]
-- On IDENTIFIER shift to state 11
-- On var_specs shift to state 12
-- On var_spec shift to state 135
-- On ident_list shift to state 16

State 11:
ident_list -> IDENTIFIER . [ STRUCT STRINGTYPE RUNETYPE MULT MAP LSQUARE LPAR INTTYPE INTERFACE IDENTIFIER FLOATTYPE COMMA CHAN ASSIGN ]
-- On STRUCT reduce production ident_list -> IDENTIFIER 
-- On STRINGTYPE reduce production ident_list -> IDENTIFIER 
-- On RUNETYPE reduce production ident_list -> IDENTIFIER 
-- On MULT reduce production ident_list -> IDENTIFIER 
-- On MAP reduce production ident_list -> IDENTIFIER 
-- On LSQUARE reduce production ident_list -> IDENTIFIER 
-- On LPAR reduce production ident_list -> IDENTIFIER 
-- On INTTYPE reduce production ident_list -> IDENTIFIER 
-- On INTERFACE reduce production ident_list -> IDENTIFIER 
-- On IDENTIFIER reduce production ident_list -> IDENTIFIER 
-- On FLOATTYPE reduce production ident_list -> IDENTIFIER 
-- On COMMA reduce production ident_list -> IDENTIFIER 
-- On CHAN reduce production ident_list -> IDENTIFIER 
-- On ASSIGN reduce production ident_list -> IDENTIFIER 

State 12:
var_decls -> VAR LPAR var_specs . RPAR SEMICOLON [ VAR TYPE FUNC EOF ]
var_specs -> var_specs . var_spec [ RPAR IDENTIFIER ]
-- On RPAR shift to state 13
-- On IDENTIFIER shift to state 11
-- On var_spec shift to state 15
-- On ident_list shift to state 16

State 13:
var_decls -> VAR LPAR var_specs RPAR . SEMICOLON [ VAR TYPE FUNC EOF ]
-- On SEMICOLON shift to state 14

State 14:
var_decls -> VAR LPAR var_specs RPAR SEMICOLON . [ VAR TYPE FUNC EOF ]
-- On VAR reduce production var_decls -> VAR LPAR var_specs RPAR SEMICOLON 
-- On TYPE reduce production var_decls -> VAR LPAR var_specs RPAR SEMICOLON 
-- On FUNC reduce production var_decls -> VAR LPAR var_specs RPAR SEMICOLON 
-- On EOF reduce production var_decls -> VAR LPAR var_specs RPAR SEMICOLON 

State 15:
var_specs -> var_specs var_spec . [ RPAR IDENTIFIER ]
-- On RPAR reduce production var_specs -> var_specs var_spec 
-- On IDENTIFIER reduce production var_specs -> var_specs var_spec 

State 16:
ident_list -> ident_list . COMMA IDENTIFIER [ STRUCT STRINGTYPE RUNETYPE MULT MAP LSQUARE LPAR INTTYPE INTERFACE IDENTIFIER FLOATTYPE COMMA CHAN ASSIGN ]
var_spec -> ident_list . typeT SEMICOLON [ VAR TYPE RPAR IDENTIFIER FUNC EOF ]
var_spec -> ident_list . typeT ASSIGN exp_list SEMICOLON [ VAR TYPE RPAR IDENTIFIER FUNC EOF ]
var_spec -> ident_list . ASSIGN exp_list SEMICOLON [ VAR TYPE RPAR IDENTIFIER FUNC EOF ]
-- On STRUCT shift to state 17
-- On STRINGTYPE shift to state 22
-- On RUNETYPE shift to state 23
-- On MULT shift to state 24
-- On MAP shift to state 25
-- On LSQUARE shift to state 27
-- On LPAR shift to state 31
-- On INTTYPE shift to state 32
-- On INTERFACE shift to state 33
-- On IDENTIFIER shift to state 34
-- On FLOATTYPE shift to state 35
-- On COMMA shift to state 123
-- On CHAN shift to state 36
-- On ASSIGN shift to state 127
-- On typeT shift to state 130

State 17:
typeT -> STRUCT . LCURLY field_decls RCURLY [ SEMICOLON RSQUARE RPAR LPAR LCURLY COMMA ASSIGN ]
-- On LCURLY shift to state 18

State 18:
typeT -> STRUCT LCURLY . field_decls RCURLY [ SEMICOLON RSQUARE RPAR LPAR LCURLY COMMA ASSIGN ]
-- On field_decls shift to state 19
-- On RCURLY reduce production field_decls -> 
-- On IDENTIFIER reduce production field_decls -> 

State 19:
field_decls -> field_decls . ident_list typeT SEMICOLON [ RCURLY IDENTIFIER ]
typeT -> STRUCT LCURLY field_decls . RCURLY [ SEMICOLON RSQUARE RPAR LPAR LCURLY COMMA ASSIGN ]
-- On RCURLY shift to state 20
-- On IDENTIFIER shift to state 11
-- On ident_list shift to state 21

State 20:
typeT -> STRUCT LCURLY field_decls RCURLY . [ SEMICOLON RSQUARE RPAR LPAR LCURLY COMMA ASSIGN ]
-- On SEMICOLON reduce production typeT -> STRUCT LCURLY field_decls RCURLY 
-- On RSQUARE reduce production typeT -> STRUCT LCURLY field_decls RCURLY 
-- On RPAR reduce production typeT -> STRUCT LCURLY field_decls RCURLY 
-- On LPAR reduce production typeT -> STRUCT LCURLY field_decls RCURLY 
-- On LCURLY reduce production typeT -> STRUCT LCURLY field_decls RCURLY 
-- On COMMA reduce production typeT -> STRUCT LCURLY field_decls RCURLY 
-- On ASSIGN reduce production typeT -> STRUCT LCURLY field_decls RCURLY 

State 21:
field_decls -> field_decls ident_list . typeT SEMICOLON [ RCURLY IDENTIFIER ]
ident_list -> ident_list . COMMA IDENTIFIER [ STRUCT STRINGTYPE RUNETYPE MULT MAP LSQUARE LPAR INTTYPE INTERFACE IDENTIFIER FLOATTYPE COMMA CHAN ]
-- On STRUCT shift to state 17
-- On STRINGTYPE shift to state 22
-- On RUNETYPE shift to state 23
-- On MULT shift to state 24
-- On MAP shift to state 25
-- On LSQUARE shift to state 27
-- On LPAR shift to state 31
-- On INTTYPE shift to state 32
-- On INTERFACE shift to state 33
-- On IDENTIFIER shift to state 34
-- On FLOATTYPE shift to state 35
-- On COMMA shift to state 123
-- On CHAN shift to state 36
-- On typeT shift to state 125

State 22:
typeT -> STRINGTYPE . [ SEMICOLON RSQUARE RPAR LPAR LCURLY COMMA ASSIGN ]
-- On SEMICOLON reduce production typeT -> STRINGTYPE 
-- On RSQUARE reduce production typeT -> STRINGTYPE 
-- On RPAR reduce production typeT -> STRINGTYPE 
-- On LPAR reduce production typeT -> STRINGTYPE 
-- On LCURLY reduce production typeT -> STRINGTYPE 
-- On COMMA reduce production typeT -> STRINGTYPE 
-- On ASSIGN reduce production typeT -> STRINGTYPE 

State 23:
typeT -> RUNETYPE . [ SEMICOLON RSQUARE RPAR LPAR LCURLY COMMA ASSIGN ]
-- On SEMICOLON reduce production typeT -> RUNETYPE 
-- On RSQUARE reduce production typeT -> RUNETYPE 
-- On RPAR reduce production typeT -> RUNETYPE 
-- On LPAR reduce production typeT -> RUNETYPE 
-- On LCURLY reduce production typeT -> RUNETYPE 
-- On COMMA reduce production typeT -> RUNETYPE 
-- On ASSIGN reduce production typeT -> RUNETYPE 

State 24:
typeT -> MULT . typeT [ SEMICOLON RSQUARE RPAR LPAR LCURLY COMMA ASSIGN ]
-- On STRUCT shift to state 17
-- On STRINGTYPE shift to state 22
-- On RUNETYPE shift to state 23
-- On MULT shift to state 24
-- On MAP shift to state 25
-- On LSQUARE shift to state 27
-- On LPAR shift to state 31
-- On INTTYPE shift to state 32
-- On INTERFACE shift to state 33
-- On IDENTIFIER shift to state 34
-- On FLOATTYPE shift to state 35
-- On CHAN shift to state 36
-- On typeT shift to state 122

State 25:
typeT -> MAP . RSQUARE typeT RSQUARE typeT [ SEMICOLON RSQUARE RPAR LPAR LCURLY COMMA ASSIGN ]
-- On RSQUARE shift to state 26

State 26:
typeT -> MAP RSQUARE . typeT RSQUARE typeT [ SEMICOLON RSQUARE RPAR LPAR LCURLY COMMA ASSIGN ]
-- On STRUCT shift to state 17
-- On STRINGTYPE shift to state 22
-- On RUNETYPE shift to state 23
-- On MULT shift to state 24
-- On MAP shift to state 25
-- On LSQUARE shift to state 27
-- On LPAR shift to state 31
-- On INTTYPE shift to state 32
-- On INTERFACE shift to state 33
-- On IDENTIFIER shift to state 34
-- On FLOATTYPE shift to state 35
-- On CHAN shift to state 36
-- On typeT shift to state 119

State 27:
typeT -> LSQUARE . exp RSQUARE typeT [ SEMICOLON RSQUARE RPAR LPAR LCURLY COMMA ASSIGN ]
typeT -> LSQUARE . RSQUARE typeT [ SEMICOLON RSQUARE RPAR LPAR LCURLY COMMA ASSIGN ]
-- On STRUCT shift to state 17
-- On STRINGTYPE shift to state 22
-- On STRINGLITERAL shift to state 28
-- On RUNETYPE shift to state 23
-- On RUNELITERAL shift to state 29
-- On RSQUARE shift to state 30
-- On RECEIVE shift to state 40
-- On PLUS shift to state 41
-- On OCTINTLITERAL shift to state 42
-- On MULT shift to state 43
-- On MINUS shift to state 44
-- On MAP shift to state 25
-- On LSQUARE shift to state 27
-- On LPAR shift to state 31
-- On INTTYPE shift to state 32
-- On INTERFACE shift to state 33
-- On IDENTIFIER shift to state 45
-- On HEXINTLITERAL shift to state 46
-- On FLOATTYPE shift to state 35
-- On FLOATLITERAL shift to state 47
-- On DECINTLITERAL shift to state 48
-- On CHAN shift to state 36
-- On BOOLNOT shift to state 49
-- On BINXOR shift to state 50
-- On BININTLITERAL shift to state 51
-- On BINAND shift to state 52
-- On typeT shift to state 53
-- On primary_exp shift to state 55
-- On exp shift to state 116

State 28:
primary_exp -> STRINGLITERAL . [ SHORTASSIGN SEMICOLON RSQUARE RSHIFTEQ RSHIFT RPAR PLUSPLUS PLUSEQ PLUS NEQ MULTEQ MULT MODEQ MOD MINUSMINUS MINUSEQ MINUS LT LSQUARE LSHIFTEQ LSHIFT LEQ GT GEQ EQ DOT DIVEQ DIV COMMA BOOLOR BOOLAND BINXOREQ BINXOR BINOREQ BINOR BINANDNOTEQ BINANDNOT BINANDEQ BINAND ASSIGN ]
-- On SHORTASSIGN reduce production primary_exp -> STRINGLITERAL 
-- On SEMICOLON reduce production primary_exp -> STRINGLITERAL 
-- On RSQUARE reduce production primary_exp -> STRINGLITERAL 
-- On RSHIFTEQ reduce production primary_exp -> STRINGLITERAL 
-- On RSHIFT reduce production primary_exp -> STRINGLITERAL 
-- On RPAR reduce production primary_exp -> STRINGLITERAL 
-- On PLUSPLUS reduce production primary_exp -> STRINGLITERAL 
-- On PLUSEQ reduce production primary_exp -> STRINGLITERAL 
-- On PLUS reduce production primary_exp -> STRINGLITERAL 
-- On NEQ reduce production primary_exp -> STRINGLITERAL 
-- On MULTEQ reduce production primary_exp -> STRINGLITERAL 
-- On MULT reduce production primary_exp -> STRINGLITERAL 
-- On MODEQ reduce production primary_exp -> STRINGLITERAL 
-- On MOD reduce production primary_exp -> STRINGLITERAL 
-- On MINUSMINUS reduce production primary_exp -> STRINGLITERAL 
-- On MINUSEQ reduce production primary_exp -> STRINGLITERAL 
-- On MINUS reduce production primary_exp -> STRINGLITERAL 
-- On LT reduce production primary_exp -> STRINGLITERAL 
-- On LSQUARE reduce production primary_exp -> STRINGLITERAL 
-- On LSHIFTEQ reduce production primary_exp -> STRINGLITERAL 
-- On LSHIFT reduce production primary_exp -> STRINGLITERAL 
-- On LEQ reduce production primary_exp -> STRINGLITERAL 
-- On GT reduce production primary_exp -> STRINGLITERAL 
-- On GEQ reduce production primary_exp -> STRINGLITERAL 
-- On EQ reduce production primary_exp -> STRINGLITERAL 
-- On DOT reduce production primary_exp -> STRINGLITERAL 
-- On DIVEQ reduce production primary_exp -> STRINGLITERAL 
-- On DIV reduce production primary_exp -> STRINGLITERAL 
-- On COMMA reduce production primary_exp -> STRINGLITERAL 
-- On BOOLOR reduce production primary_exp -> STRINGLITERAL 
-- On BOOLAND reduce production primary_exp -> STRINGLITERAL 
-- On BINXOREQ reduce production primary_exp -> STRINGLITERAL 
-- On BINXOR reduce production primary_exp -> STRINGLITERAL 
-- On BINOREQ reduce production primary_exp -> STRINGLITERAL 
-- On BINOR reduce production primary_exp -> STRINGLITERAL 
-- On BINANDNOTEQ reduce production primary_exp -> STRINGLITERAL 
-- On BINANDNOT reduce production primary_exp -> STRINGLITERAL 
-- On BINANDEQ reduce production primary_exp -> STRINGLITERAL 
-- On BINAND reduce production primary_exp -> STRINGLITERAL 
-- On ASSIGN reduce production primary_exp -> STRINGLITERAL 
